(Useless commit message)

--- a/files/elfeed.org
+++ b/files/elfeed.org
@@ -5,12 +5,14 @@
 *** [[http://math.andrej.com/feed/][Mathematics and Computation - Andrej Bauer]]
 *** [[http://existentialtype.wordpress.com/feed/][Existential Type - Rob Harper]]
 *** [[https://edwinb.wordpress.com/feed/][Edwin Brady]]
+*** [[http://ezyang.tumblr.com/rss][ezyang]]
 ** coq
 *** [[http://coq-blog.clarus.me/rss.xml][Coq blog - Guillaume Claret]]
 *** [[http://poleiro.info/atom.xml][Poleiro: latest posts]]
 ** haskell
 *** [[http://feeds.feedburner.com/fpcomplete][FP Complete]]
 *** [[http://themonadreader.wordpress.com/feed/][The Monad.Reader - Edward Kmett]]
+*** [[https://www.reddit.com/r/haskell/.rss][Haskell reddit]]
 ** emacs
 *** [[http://spacemacs.brianthicks.com/index.xml][Spacemacs Rocks]]
 *** [[http://endlessparentheses.com/atom.xml][endless parens]]
