--- a/README.org
+++ b/README.org
@@ -7,3 +7,17 @@ Ansible roles aren't used to enforce minimal complexity. Ansible is only used
 for symlinking and mild templating.
 
 Anything complex or involving services/packages is upstreamed to nixpkgs.
+
+** migration
+
+   I'm in the midst of migrating from Ansible to [[https://github.com/rycee/home-manager][home-manger]]. Setup currently
+   requires a bit more than usual:
+
+   #+begin_src bash :results verbatim
+     nix-channel --add https://github.com/rycee/home-manager/archive/release-18.03.tar.gz home-manager
+     nix-channel --update
+   #+end_src
+
+   #+RESULTS:
+
+   It is currently only used to manage =dunst=.
