--- a/files/elfeed.org
+++ b/files/elfeed.org
@@ -11,14 +11,14 @@
 ** Coq
 *** [[http://coq-blog.clarus.me/rss.xml][Coq blog - Guillaume Claret]]
 *** [[http://poleiro.info/atom.xml][Poleiro: latest posts]]
-** Haskell
+** Haskell                                                          :haskell:
 *** [[http://feeds.feedburner.com/fpcomplete][FP Complete]]
 *** [[http://themonadreader.wordpress.com/feed/][The Monad.Reader - Edward Kmett]]
 *** [[https://www.reddit.com/r/haskell/.rss][Haskell reddit]]
 *** [[http://justtesting.org/rss][Just Testing]]
 *** [[https://ryanglscott.github.io/feed.xml][Ryan G.L. Scott]]
 *** [[https://www.parsonsmatt.org/feed.xml][Matt Parsons]]
-** Emacs
+** Emacs                                                              :emacs:
 *** [[http://spacemacs.brianthicks.com/index.xml][Spacemacs Rocks]]
 *** [[http://endlessparentheses.com/atom.xml][endless parens]]
 *** [[pragmaticemacs.com/feed/][pragmatic emacs]]
