elfeed: more blogs

--- a/files/elfeed.org
+++ b/files/elfeed.org
@@ -26,7 +26,6 @@
 *** [[https://with-emacs.com/rss.xml][with emacs]]
 *** [[https://www.reddit.com/r/orgmode/][org-mode subreddit]]
 *** [[https://emacs.cafe/feed.xml][emacs.cafe]]
-*** [[https://planet.emacslife.com/atom.xml][planet emacs]]
 ** Nix
 *** [[http://planet.nixos.org/atom.xml][NixOS Planet]]
 *** [[http://sandervanderburg.blogspot.com/feeds/posts/default][Sander van der Burg's blog]]
@@ -38,5 +37,19 @@
 *** [[http://onethingwell.org/rss][One Thing Well]]
 *** [[http://blog.llvm.org/feeds/posts/default][LLVM project blog]]
 *** [[https://github.com/siddharthist.private.atom?token=AEGGs3KMHuciRsj5_WLER5StFA6vZKAJks66OiqVwA==][Github]]
-*** [[https://www.reddit.com/r/nosyntax/.rss][r/nosyntax]]
 *** [[https://lwn.net/headlines/rss][LWN]]
+*** [[https://accidentallyquadratic.tumblr.com/rss][Accidentally Quadratic]]
+*** [[https://www.elidedbranches.com/feeds/posts/default][Elided Branches]]
+*** [[https://danluu.com/atom.xml][Dan Luu]]
+*** [[https://jvns.ca/atom.xml][Julia Evans]]
+*** [[https://eli.thegreenplace.net/feeds/articles.atom.xml][Eli Bendersky]]
+*** [[https://www.evanjones.ca/index.rss][Evan Jones]]
+*** [[http://kamalmarhubi.com/blog/feed.xml][Kamal Marhubi]]
+*** [[https://blog.regehr.org/feed][Embedded in Academia - John Regehr]]
+*** Juho Snellman
+**** [[https://www.snellman.net/blog/rss-history.xml][History]]
+**** [[https://www.snellman.net/blog/rss-networking.xml][Networking]]
+**** [[https://www.snellman.net/blog/rss-lisp.xml][Lisp]]
+*** [[https://kate.io/feed.xml][Kate Murphy]]
+*** [[https://blog.nelhage.com/atom.xml][Made of Bugs]]
+*** [[https://rachelbythebay.com/w/atom.xml][rachelbythebay]]
