--- a/files/elfeed.org
+++ b/files/elfeed.org
@@ -53,3 +53,4 @@
 *** [[https://kate.io/feed.xml][Kate Murphy]]
 *** [[https://blog.nelhage.com/atom.xml][Made of Bugs]]
 *** [[https://rachelbythebay.com/w/atom.xml][rachelbythebay]]
+*** [[https://buttondown.email/hillelwayne/rss][Hillel Wayne Newsletter]]
