--- a/files/elfeed.org
+++ b/files/elfeed.org
@@ -59,3 +59,4 @@
 *** [[https://mypy-lang.blogspot.com/feeds/posts/default][The Mypy Blog]]
 *** [[https://alastairreid.github.io/feed.xml][Alastair Reid]]
 *** [[https://project-oak.github.io/rust-verification-tools/feed.xml][Rust Verification Tools]]
+*** [[http://www.quviq.com/category/blog/feed/][Blog – QuviQ]]
